export interface BackendConfig {
  gatewayUrl: string;
}
